# windbg-mcp-rs

./: .gitignore  Cargo.toml  README.md  todolist.md
.github/workflows/: ci.yml  release-on-tag.yml
demo/secret-search/: Cargo.toml  README.md  run_demo.py
demo/secret-search/src/: lib.rs
docs/: ace-challenge-mcp-test-notes.md  ace-challenge-solution.md  get-output-regression-plan.md  headless-operator-guide.md  kernel-driver-debugging-implementation.md  shadowgate-crypto-reversing.md  shadowgate-notes.md
skills/: README.md
skills/windbg-cli/: SKILL.md
src/: daemon.rs  daemon_launcher.rs  executor.rs  lib.rs  resources.rs  server.rs  session_manager.rs
src/headless/: command_sync.rs  events.rs  mod.rs  module_match.rs  synthetic_load.rs
tools/: full_debug_test.py  headless_extension_smoke.py  headless_get_output_check.py  headless_kdnet_soak.py  headless_mcp_lib.py  headless_mcp_smoke.py  headless_syscall_breakpoint_smoke.py  headless_trace_breakpoint_smoke.py  headless_user_mode_smoke.py  headless_user_va_breakpoint_smoke.py  shadowgate_smoke.py
